Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* added eapi awareness to atoms, so that an eapi1 atom only allows the 
  slot extension for example.

* remove a stray printf from cpy atom; visible only when repository atoms
  are in use.


0.4.5: April 9, 2008

* fix collision unprotect trigger exceptions (typically KeyError).
  ticket #165

* correct invalid passing of force keyword down when the repository isn't
  frozen.  Occasionally triggered user visible tracebacks in pmaint copy.

* portage broke compatibility with pkgcore a while back for our binpkgs-
  for some inane reason, portage requires CATEGORY and PF in the xpak
  segment.  This is being removed from portage in 2.2, but in the interim
  pkgcore now forces those keys into the binpkgs xpak for compatibility
  with portage.

  Shorter version: pmaint copy generated binpkgs work with portage again.

* cbuild/chost/ctarget are available via pquery --attr, and are written to
  binpkg/vdb now.

* stat removal work: FEATURES=-metadata-cache reuses existing eclass cache
  object, thus one (and only one) scan of ${PORTDIR}/eclass

* metadata, flat_hash, and paludis_flat_list cache formats configuration
  arg 'label' is no longer required, and will be removed in 0.5.  If they're
  unspecified, pkgcore will use location as the place to write the cache at,
  else it'll combine location and label.

* cdb, anydbm, sqlite, and sql_template cache backends have been removed
  pending updating the code for cache backend cleanups.  If interested in 
  these backends, contact ferringb at irc://freenode.net/#pkgcore .


0.4.4: April 6, 2008

* merging/replacing performance may be a bit slower in this release- the level
  of stats calls went up in comparison to previous releases, with several
  duplicates.  This will be corrected in the next release- releasing in the 
  interim for bugfixes this version contains.
