@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* add SunOS to known OS's since it's lchown suffices for our needs.
+
 * added eapi awareness to atoms, so that an eapi1 atom only allows the 
   slot extension for example.
 
